@@ -1,3 +1,8 @@
+2007-11-30  Kohei Yoshida  <kyoshida@novell.com>
+
+	* util/packExtension.py: added script to pack scsolver as an extension
+	at the end of the build run.
+
 2007-11-27  Kohei Yoshida  <kyoshida@novell.com>
 
 	* workben/addon_pkg/translation/de/scsolver.properties: added German
